<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/pattern_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/card_title"
            android:textColor="@color/color_2"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/qrImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_content_description" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@drawable/btn_back_bg"
            android:textColor="#FFF"
            android:layout_marginTop="64dp"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_vcard"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_delete_bg"
            android:textColor="#FFF"
            android:textAllCaps="true"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>